roughly/tests/snapshots/test_format__repeat_statement-3.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        repeat # 1\n            body\n        repeat # 1\n        { body }\n        \"#\n}).unwrap()"
---
repeat # 1
{
  body
}
repeat # 1
{
  body
}
