roughly/tests/snapshots/test_format__string-2.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            \"foo\n                bar\"\n            foo(\"foo\n                bar\")\n        \"#\n}).unwrap()"
---
"foo
    bar"
foo(
  "foo
    bar"
)
