roughly/tests/snapshots/test_format__strings.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r##\"\n            \"\"\n            ''\n            \"foo\"\n            \"foo\n            bar\"\n            \"#\"\n            \",\"\n            \"}\"\n            'foo'\n            'foo\n            bar'\n            '#'\n            ','\n            '}'\n        \"##\n}).unwrap()"
---
""
""
"foo"
"foo
bar"
"#"
","
"}"
"foo"
"foo
bar"
"#"
","
"}"
