roughly/tests/snapshots/test_format__while_statement-2.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{ r#\"\n            while(foo(\n            bar)) baz\n        \"# }).unwrap()"
---
while (
  foo(
    bar
  )
) {
  baz
}
